# pub-python-fastapi-api

./: .flake8  .gitignore  README.md  build.py  pyproject.toml
python_fastapi_app/: __main__.py  app.py
python_fastapi_app/config/: local.toml  logging.yaml
python_fastapi_app/mod/: core.py  fast.py
